Sun Jan  9 18:29:13 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* ACEXML/apps/svcconf/Makefile.am:
	* ACEXML/common/Makefile.am:
	* ACEXML/parser/parser/Makefile.am:
	* Kokyu/Makefile.am:
	* protocols/ace/HTBP/Makefile.am:

          Generate pkg-config *.pc files from templates.

	* ACEXML/apps/svcconf/ACEXML_XML_Svc_Conf_Parser.pc.in:
	* ACEXML/common/ACEXML.pc.in:
	* ACEXML/parser/parser/ACEXML_Parser.pc.in:
	* Kokyu/Kokyu.pc.in:
	* protocols/ace/HTBP/ACE_HTBP.pc.in:

          New files, pkg-config *.pc templates.

Sun Jan  9 17:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/System_V_IPC/SV_Semaphores/Semaphores_1.cpp:
        * examples/System_V_IPC/SV_Semaphores/Semaphores_2.cpp:
        * examples/System_V_IPC/SV_Shared_Memory/SV_Shared_Memory_Test.cpp:
        * examples/System_V_IPC/SV_Message_Queues/MQ_Client.cpp:
        * examples/System_V_IPC/SV_Message_Queues/MQ_Server.cpp:
          Fixed unicode compile errors

Sun Jan  9 17:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/lib/Server_Logging_Handler_T.{h,cpp}:
          Fixed unicode compile errors

Sun Jan  9 12:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/IOStream/client/iostream_client.cpp:
        * examples/IOStream/server/iostream_server.cpp:
        * examples/IPC_SAP/TLI_SAP/CPP-ATM-client.cpp:
        * examples/IPC_SAP/TLI_SAP/CPP-ATM-server.cpp:
        * examples/OS/process/process.cpp:
          Fixed unicode link errors

Sun Jan  9 12:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Connection/non_blocking/test_lsock_connector.cpp:
        * examples/Connection/non_blocking/test_spipe_acceptor.cpp:
        * examples/Connection/non_blocking/test_spipe_connector.cpp:
        * examples/Connection/non_blocking/test_tli_acceptor.cpp:
        * examples/Connection/non_blocking/test_tli_connector.cpp:
          Fixed unicode link errors
